# jxl-wasm

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
demo/: index.html  jxl_wasm.js  jxl_wasm_bg.wasm  jxl_worker.js  jxlworker.js
demo/img/: chamasway.jxl  ina4k.jxl  reine-cover.jxl
src/: lib.rs
