[package]
name = "jxl-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
jxl-oxide = "0.3.0"
miniz_oxide = "0.7.1"
png = "0.17.9"
thiserror = "1.0.41"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"

[profile.release]
lto = true
