[package]
name = "jxl-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
jxl-oxide = "0.5.1"
miniz_oxide = "0.7.1"
png = "0.17.10"
thiserror = "1.0.41"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"

[dependencies.rayon]
version = "1.8.0"
optional = true

[features]
default = ["rayon"]
rayon = ["dep:rayon", "jxl-oxide/rayon"]

[profile.release]
lto = true
opt-level = "z"
